jlatexmath (1.0.1)
	* Spaces were not ignored in tabular options.

	* Bad positions of the exponent & indice with Bigr{|}_1^3

	* Fix bug with line-breaking (infinite loop on "\\ {abcdef}a" or exceptions).

jlatexmath (1.0.0)
	* Fix bug 767: U with umlaut was shown as O with umlaut

	* Handle breakline in math mode

	* Remove String::isEmpty for Java 5 compatibility

        * Fix bug 907: bad rendering of text{text{x_1Test}}

jlatexmath (0.9.8)
	* Bugs 907 fixed: bad rendering of \text{\text{x_1Test}}.

	* Handle breakline.

	* Add a static method TexFormula::getAsText to manage breakline and text
	  as default.

jlatexmath (0.9.7)
	* Fix bugs with \bold{\b and \DeclareMathOperator{\ in partial mode.

	* Add a static method TeXFormula.getAsText to break the line according to \n and to convert into a RomanAtom.
	* newcommand{ threw an exception in partial mode.

	* Fix bug with T carron and L carron.

	* Add the unicode for Euler's constant.

	* Fix bug when getting length.

	* Add the TeX macros: \above and \abovewithdelims.

	* Blanks after a command were skipped in text mode.

	* Extend the way to code colors in \textcolor, \colorbox, \fcolorbox,
	  fgcolor and bgcolor.
	  Now \textcolor{color} where color could be 255,0,0 (int RGB) or
          1.0,0,0 (float RGB) or 1.0,0,0,0.5 (float CMYK) or 0.6 (Gray) or
          #FF0000 (html RGB) or FF0000 (hexa RGB) are accepted.

	* \v accent was badly scaled in certain font files.

        * Resizebox could lead to a box with NaN as dimensions !
	   
	* Add " for ''

	* Bug with \fg

	* Add a command \jlmXML which can replaces $foo by the value of foo
	  attribute.

	* Add the possibility to add a break in a line in using \-.

	* Bad type for FencedAtom.

	* Bad translation of &8821; (right guillemet) into LaTeX.

	* Issue with default color in TeXIcon.

	* Fix build problems.

	* Change FSF address in LICENSE files.

	* Add a check !=null in cache.

	* Bugs fix: Columns was not centered in matrix env and \cot was