@@ -1,4 +1,6 @@
 jlatexmath (1.0.1)
+	* Handle auto-break after a binop or relation op. 
+
 	* Spaces were not ignored in tabular options.
 
 	* Bad positions of the exponent & indice with Bigr{|}_1^3
